-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.9.0 Beta2
-
None
-
-
4a182f2fe (dev), b7ed565a2 (6.9), f70a8ca9b (6.8)
-
Multimedia wk 51-2
Captured photos using QImageCapture and QCamera have no rotation applied, causing the produced image files to be rotated incorrectly whenever the device is not rotated to be aligned with the camera sensor.
This can be observed on all my test devices using the FFmpeg backend:
Motorola Razr 40 Ultra
Samsung Galaxy Tab A9
| For Gerrit Dashboard: QTBUG-132779 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 617034,3 | Android, FrameFactory: Apply rotation to frame surfaceFormat | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 617151,2 | Android, FrameFactory: Apply rotation to frame surfaceFormat | 6.9 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 617187,2 | Android, FrameFactory: Apply rotation to frame surfaceFormat | 6.8 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 617387,1 | Android, FrameFactory: Apply rotation to frame surfaceFormat | tqtc/lts-6.5 | qt/tqtc-qtmultimedia | Status: ABANDONED | 0 | 0 |